Remove the org email confirmation code, pending registration module. Separate keycloak into a module. Update swagger UI to work with keycloak.